# riva-otomasyon

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.build.yml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
apps/accounts/: admin.py  forms.py  models.py  urls.py  views.py
apps/appointments/: admin.py  forms.py  models.py  urls.py  views.py
apps/billing/: admin.py  forms.py  models.py  urls.py  views.py
apps/core/: admin.py  audit.py  context_processors.py  forms.py  middleware.py  models.py  otp.py  pdf.py  services.py  settings_urls.py  settings_views.py  urls.py  views.py
apps/medical/: admin.py  forms.py  models.py  services.py  urls.py  views.py
apps/owners/: admin.py  forms.py  models.py  urls.py  views.py
apps/patients/: admin.py  forms.py  models.py  urls.py  views.py
apps/reminders/: admin.py  forms.py  models.py  providers.py  services.py  urls.py  views.py
apps/reports/: views.py
apps/vaccines/: admin.py  forms.py  models.py  urls.py  views.py
docker/: entrypoint.sh
docs/: BACKUP.md  DEMO_KURULUM.md  DEPLOYMENT.md  LANDING_INTEGRATION.md
riva/: asgi.py  urls.py  wsgi.py
riva/settings/: base.py  clinic.py  dev.py  prod.py
static/css/: input.css  tailwind.out.css
templates/: base.html
templates/accounts/: auth_base.html  password_change.html  password_reset_request.html  password_reset_set.html  password_reset_verify.html
templates/appointments/: calendar.html  confirm_delete.html  detail.html  (+3 more)
tests/: test_smoke.py
(+82 files in other folders)
