[project]
name = "riva-otomasyon"
version = "0.1.0"
description = "Riva Veteriner Kliniği — klinik içi operasyon otomasyonu (MVP)"
requires-python = ">=3.11"
dependencies = [
    "Django>=5.0,<5.2",
    "psycopg2-binary",
    "django-environ",
    "whitenoise",
    "weasyprint",
    "Pillow",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
    "factory_boy",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "DJ"]
ignore = ["E501"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "riva.settings.dev"
python_files = ["test_*.py", "tests.py"]
testpaths = ["tests", "apps"]
